[package]
name = "i-wanna-build"
version = "0.1.0"
edition = "2021"
description = "Level serializer / deserializer for I Wanna Maker."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs = "0.8.19"
quick-xml = { version = "0.31.0", features = ["serialize"] }
serde = { version = "1.0.192", features = ["derive"] }